# mcp-tabular

./: LICENSE  README.md  pyproject.toml
examples/: sales.csv
mcp_tabular/: __init__.py  server.py
tests/: test_server.py
