[project]
name = "mcp-tabular"
version = "0.1.0"
description = "MCP server exposing read-only SQL over CSV/Excel files via DuckDB."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ayush Srivastava", email = "ayush.s0410@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "duckdb", "csv", "excel", "agents"]
dependencies = ["mcp>=1.0", "duckdb>=0.10"]

[project.optional-dependencies]
excel = ["openpyxl>=3.1", "pandas>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
mcp-tabular = "mcp_tabular.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
